# conan-libimagequant

./: CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  conanfile.py
test_package/: CMakeLists.txt  test_package.c
